--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "swiper": "^11.1.15",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
