--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.17",
     "add-to-calendar-button": "^2.7.3",
     "aos": "^3.0.0-beta.6",
+    "lucide-react": "^0.469.0",
     "next": "^14.0.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
